aligned images, and fixed logos

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,42 @@
 body{
   font-family: "Verdana";
-  background-color: #0C233F;
+  width: 100%;
+  height: 100%
 }
+
+#banner{
+  background-color: #0C233F;
+  display: block;
+  margin: auto;
+  position: relative;
+  bottom: 20px;
+}
+
 #title{
   color: white;
   font-size: 120%;
   position: relative;
   left: 20px;
-  bottom: 10px;
+  top: 5px;
 }
+
 #logo{
-  width: 265px;
-  height: 65px;
+  position: relative;
+  top: -8px;
+  left: 15px;
+}
+
+#slideshow{
+  
+}
+
+#slideshow-image{
+  display: block;
+  margin: auto;
+  position: relative;
+  top: 20px;
+}
+#footer{
+  background-color: #0C233F;
+
 }
